assets/stylesheets/haltr.css
/* Redmine tabular forms, but with div instead of p */

html>body .tabular div {overflow:hidden;}

#payment_stuff, .client_hiden_fields {
  display: inline;
}

ul.menu-rapid li, #sidebar ul li {list-style-type:none;}

th.money, td.money, .money{
  text-align: right !important;
  white-space: nowrap;
}

.menu-rapid li {
  display: inline-block;
  margin-left: 20px;
  position: relative;
}

.menu-rapid ul {
    width: 250px;
    background: white;
    border-radius: 4px 4px 4px 4px;
    box-shadow: 0 0 3px 1px #999999;
    padding: 10px 0;
    position: absolute;
    left: -9999em;
    top: auto;
    z-index: 1000;
    opacity: 0;
    transition: all 250ms ease-in-out 0s;
}
.menu-rapid li:hover ul {
    left: auto;
    opacity: 1;
}
.menu-rapid ul li {
    float: none;
    border-bottom: dashed 1px #FFF;
    padding: 0;
    margin: 0 0px !important;
    display: block;
    font-size: 12px;
}
.menu-rapid ul li a {
    display: block;
    background: none;
    border-radius: none;
    box-shadow: none;
    padding: 5px 20px;
    margin: 0;
    text-shadow: 0 1px 0 #FFFFFF;
    font-size: 14px;
    font-weight: 500;
}
.menu-rapid ul li.submenu {
  white-space: nowrap;
}
.menu-rapid ul ul {
  display:none;
  position:absolute;
  top:100%;
  left:0;
  background:#fff;
  padding:0;
}
.menu-rapid  ul ul li {
  float:none;
}
.menu-rapid ul ul a {
  line-height:120%;
}
.menu-rapid ul li:hover > ul {
  display:block;
  margin-left: 241px;
  margin-top: -26px;
}
.invoice-navigator {
  margin-right: 5px !important;
}

.invoice-channel-links h3, .invoice-events h3 {
  border-bottom: 1px dotted #bbb;
}

.invoice-channel-links, .invoice-events {
  margin: 0 50px 20px 50px;
}
.invoice-comments h3 {
  border-bottom: 1px dotted #bbb;
}
.invoice-comments {
  margin: 20px 50px 0 50px;
}
.overlay {
  position:fixed; top:0; left:0;
  width:100%; height:100%;
  /* width: 1138px; height: 1132px; */
  z-index: 1001;
  background: transparent url(../img/overlay.png) 50% 50% repeat;
  opacity: 0.9;
}

#new_client_form {
  position: absolute; top: 115px; left: 50%;
}

.new_client_box {
  position: relative;
  left: -50%;
  background-color: white;
  z-index: 1002;
  border: 4px solid #333333;
  width: 950px;
}

.new_client_box form, .new_client_box>div {
  margin: 30px;
}

.mail_box {
  position:absolute; top:200px; left:250px;
  background-color: #FFFFCC;
  width: 650px;
  z-index: 1002;
  border: 4px solid #333333;
  top: -5px;
}

#mail {
  margin: 30px;
}

.amended, .amended td a {
  text-decoration: line-through;
} 

select.tax {
  width: 77px;
}

.lineErrorExplanation {
  border: 2px solid;
  padding: 4px 4px 4px 4px;
  margin: 10px;
}

.lineErrorExplanation a {
  font-weight: bold;
}

.pastdue {
  color: red !important;
  white-space: nowrap;
}
.halfpaid {
  color: blue;
}
.disabled {
  text-decoration: none !important;
  color: #A3A3A3 !important;
}
table.invoice_lines {
  min-width: 70%;
}
.unread {
  font-weight: bold;
}

/* State ribbon */

#invoice_wrapper {
  position: relative;
  overflow: hidden;
}

.ribbon {
  background-color: #555555;
  overflow: hidden;
  white-space: nowrap;
  /* top left corner */
  position: absolute;
  left: -50px;
  top: 40px;
  /* 45 deg ccw rotation */
  -webkit-transform: rotate(-45deg);
     -moz-transform: rotate(-45deg);
      -ms-transform: rotate(-45deg);
       -o-transform: rotate(-45deg);
          transform: rotate(-45deg);
  /* shadow */
  -webkit-box-shadow: 0 0 10px #888;
     -moz-box-shadow: 0 0 10px #888;
          box-shadow: 0 0 10px #888;
}
.ribbon span {
  color: #fff;
  display: block;
  margin: 1px 0;
  padding: 10px 50px;
  text-align: center;
  text-decoration: none;
  /* shadow */
  text-shadow: 0 0 5px #444;
  width: 230px;
}

.ribbon-new, .ribbon-received {
  background-color: yellow;
}
.ribbon-new span, .ribbon-received span {
  color: black;
  text-shadow: 0 0 5px #fff;
}
.ribbon-read, .ribbon-sent, .ribbon-accepted, .ribbon-closed, .ribbon-paid, .ribbon-registered, .ribbon-accounted {
  background-color: green;
}
.ribbon-error, .ribbon-discarded, .ribbon-refused, .ribbon-cancelled {
  background-color: red;
}
.haltr_event_error {
  color: darkred;
}
.haltr_hidden_event {
  color:#B40404;
}
.cashflow {
  text-align: right;
}
div.audited {
  display: none;
}
div.audited li:hover {
  cursor: alias;
  background-color: #FFFFCC;
}
div.audited-changes {
  display: none;
  position: absolute;
  float: left;
}
div.audited-changes table table {
  border: 1px solid black;
}
div.audited-changes table table td {
  padding: 8px;
}
div.audited-changes table td {
}
div.audited-changes table tr.new-values {
  background-color: #dfd;
}
div.audited-changes table tr.old-values {
  background-color: #fdd;
}
div.action-linked_to_mine #companies {
  margin-bottom: 20px;
}
#denied_requests {
  display: none;
}
.companyid {
  font-size: 10px;
}
#invoice_img {
  text-align: center;
}
#invoice_img .image {
  position: relative;
  border: 1px solid #666666;
  overflow: hidden;
}
#invoice_img h3 {
  padding: 0;
}
#invoice_preview_small_box {
  border: 1px dotted;
  margin: 0;
  margin-bottom: 10px;
  padding: 10px;
  text-align: right;
}
#invoice_preview_small_box .invoice-calculations {
  margin: 0;
}
#invoice_preview_small_box .vendor {
  margin-bottom: 10px;
}
#invoice_preview_small_box .invoice-calculations td {
  padding-right: 2px;
}
table.received_show {
  width: auto;
}
table.received_show td {
  text-align: left;
}

div.attachments span.size {
  font-size: 1em;
}
div.attachments span.author {
  color: #888;
  font-size: 0.9em;
}
span.add_attachment {
  font-size: 1em;
}
span#attachments_fields {
  font-size: 1em;
}
span#attachments_fields input.filename {
  width: 29%;
}
span#attachments_fields input.description {
  margin-left: 1%;
  width: 69%;
}
div#invoice_img span#send_info {
  visibility: hidden;
}

.rectangle-txt {
  position: absolute;
  padding: 0;
  color: transparent;
  background: rgba(234, 252, 23, .1);
  z-index: 2;
}
.rectangle-txt input{
  display: none;
}
.rectangle-txt:not(.context-menu-selection):hover {
  background: white;
  color: black;
  z-index: 5;
  border: 1px solid green;
}
.rectangle-txt.hastag {
  background: rgba(255,255,51,.9);
  color: black;
  border: none;
  z-index: 5;
  font-weight: bold;
  border: 1px solid yellow;
}
.rectangle-tag {
  border-radius: 0.25em;
  color: #fff;
  display: inline;
  font-size: 75%;
  font-weight: 700;
  line-height: 1;
  padding: 0.2em 0.6em 0.3em;
  text-align: center;
  vertical-align: baseline;
  white-space: nowrap;
  background: rgba(92, 184, 92, .7);
  box-sizing: border-box;
  position: absolute;
  z-index: 1;
}
.notfound-tag {
  border-radius: 0.25em;
  color: #fff;
  display: inline;
  font-size: 12px;
  font-weight: 700;
  line-height: 1.7;
  padding: 0.2em 0.6em 0.3em;
  margin-bottom: 0.2em;
  text-align: center;
  vertical-align: baseline;
  white-space: nowrap;
  background: rgba(184, 82, 92, 1);
  box-sizing: border-box;
}
.controller-received #attachments_fields .description {
  display: none !important;
}
#invoice_img .invoice-calculations th {
  padding-left: 0;
}
#invoice_img h2.invoice-ID {
  padding: 0;
  text-align: right;
}
.controller-clients .client-info {
  border: 1px outset orange;
  margin-bottom: 10px;
  padding: 10px;
}

.controller-clients .people-info {
  border: 1px outset grey;
  margin-bottom: 10px;
  padding: 10px;
}

.controller-clients .invoices-box {
  border: 1px outset grey;
  margin-bottom: 10px;
  padding: 10px;
}

.controller-clients .client-info h3 {
  font-size: 120%;
}
.select_to_edit {
  cursor: pointer;
}
td.invoice-templates-total {
  border: none;
  font-weight: bold;
}
.dl-horizontal dt {
  clear: left;
  float: left;
  overflow: hidden;
  text-align: right;
  text-overflow: ellipsis;
  white-space: nowrap;
  width: 220px;
}
dt {
  font-weight: 700;
}
dd, dt {
  line-height: 1.42857;
}
.dl-horizontal dd {
  margin-left: 240px;
}
div.accept_refuse_form {
  border: 1px solid;
  margin-bottom: 10px;
  padding: 20px;
}
label.radio {
  display: inline;
  margin-left: 45px;
}
div#invoice_lines table.table-lines {
  margin-bottom: -1px;
}
span.table-lines {
  background: #CAE0EA;
  margin-top: -15px;
  border-radius: 0px;
}
span#attachments_fields {
  display: block;
  margin-bottom: 15px;
}
span#attachments_fields span {
  background: #CAE0EA;
  padding: 15px;
}
span#attachments_fields span input {
  border-radius: 6px;
  border: 1px solid #EEEEEE;
  background: #FFFFFF;
  font-size: 14px;
  box-shadow: none;
  height: 34px;
  padding: 6px 12px;
  transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
}
span.field_with_errors input {
  border: 1px solid red !important;
}
div#row-title {
  margin-right: 0px;
  padding-left: 2px;
}
.table.table-taxes, .table.table-taxes > thead tr th, .table.table-taxes > tfoot tr td {
  background: #CAE0EA;
  padding: 10px 10px 10px 10px;
}
.table.table-taxes {
  border-collapse: separate;
}
.table.table-bank-info, .table.table-bank-info > thead tr th, .table.table-bank-info > tfoot tr td {
  background: #CAE0EA;
  padding: 10px 10px 10px 10px;
}
.table.table-bank-info {
  border-collapse: separate;
}
tr.no-padding td {
  padding: 0 !important;
}
div.wrapper-element {
  margin-bottom: 40px;
}
div.wrapper-element form {
  display: inline-block;
}
a.icon-fa-send.disabled {
  color: #921b1b !important;
}
ul.pages li span:hover.disabled {
  background-color: #F0F0F0 !important;
}
div.wrapper-pagination-results label {
  padding-top: 5px;
}

